Fix spacing on channel index

--- a/app/assets/stylesheets/homepage/channel_index.scss
+++ b/app/assets/stylesheets/homepage/channel_index.scss
@@ -38,6 +38,11 @@
     line-height: 20px;
 
     .channel-index-item{
+
+      .fa-hashtag{
+        margin-left: 5px;
+      }
+
       display: flex;
       flex-direction: row;
       align-items: center;
