--- a/app/assets/stylesheets/homepage/channel_users.scss
+++ b/app/assets/stylesheets/homepage/channel_users.scss
@@ -19,7 +19,7 @@
 
 .user-list {
   margin-top: 20px;
-  margin-left: 10px;
+  margin-left: 20px;
   width: 230px;
   overflow: scroll;
 }
@@ -44,6 +44,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    font-weight: 500;
+    font-weight: 400;
   }
 }
